deployment-and-service-v3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v3-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-v3
  template:
    metadata:
      labels:
        app: app-v3
    spec:
      containers:
      - name: app-v3-container
        image: shay88/k8s-node-app:v3
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: app-v3-service
spec:
  type: ClusterIP
  selector:
    app: app-v3
  ports:
  - port: 3000
    targetPort: 3000
