ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
  - http:
      paths:
      - path: /app
        pathType: Prefix
        backend:
          service:
            name: app-v3-service
            port:
              number: 3000
      - path: /something
        pathType: Prefix
        backend:
          service:
            name: app-v4-service
            port:
              number: 3000
